update tampilan fade

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
   <section id="slide6">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1603575448362-19f3fdc9b7dd?w=800" alt="Foto Kenangan">
+      <img src="assets/salad1.png" alt="Foto Kenangan">
       <h2>Untukmu</h2>
       <p>Semoga kebahagiaan dan kedamaian selalu bersamamu. Hari ini, dan setiap hari. 💫</p>
     </div>
