--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #fff;
+      background-image: url(assets/magicpattern-oPH_5xuMgQw-unsplash.jpg);
+      background-size: cover;
       color: #111;
       overflow: hidden;
     }
@@ -28,7 +29,6 @@
       opacity: 0;
       transform: translateY(30px);
       transition: opacity 1s ease, transform 1s ease;
-      background: #fff;
     }
 
     section.active {
