--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
       opacity: 0;
       transform: translateY(30px);
       transition: opacity 1s ease, transform 1s ease;
-<<<<<<< HEAD
-=======
 
->>>>>>> 4771f7b (new asset upload)
     }
 
     section.active {
@@ -175,8 +172,8 @@
 
   <section id="slide6">
     <div class="card">
-      <img src="assets/salad1.png" alt="Foto Kenangan">
-      <h2>Untukmu</h2>
+      <img src="assets/nana.jpg" alt="Foto Kenangan">
+      <h2>Untukmu 💖</h2>
       <p>Semoga kebahagiaan dan kedamaian selalu bersamamu. Hari ini, dan setiap hari. 💫</p>
     </div>
   </section>
