--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
       background-image: url(assets/magicpattern-oPH_5xuMgQw-unsplash.jpg);
       background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
       color: #111;
       overflow: hidden;
     }
